Fixes padding on mobile for articles

--- a/app/assets/stylesheets/home_page_1px.css.scss
+++ b/app/assets/stylesheets/home_page_1px.css.scss
@@ -55,7 +55,6 @@ section {
   article, aside {
     @include grid-column(12);
     padding: 30px;
-    padding-left: 0px;
     border-bottom: solid 1px $mint-green;
   }
 
