--- a/app/assets/stylesheets/home_page_desktop.css.scss
+++ b/app/assets/stylesheets/home_page_desktop.css.scss
@@ -1,27 +1,29 @@
 section {
   header {
-  position: relative;
-  margin-top: 40px;
-  h1 {
-    font-size: 100px;
-    @include grid-column(3);
-  }
-  .details {
-    @include grid-column(9);
-    display: inline-block;
-    text-align: right;
-    color: blue;
-    position: absolute;
-    right: 10px;
-    width: 70%;
-    p {
-      font-size: 20px;
-      line-height: 25px;
-      padding: 5px;
+    position: relative;
+    margin-top: 40px;
+    h1 {
+      font-size: 100px;
+      @include grid-column(3);
+    }
+    .details {
+      @include grid-column(9);
+      display: inline-block;
+      text-align: right;
+      color: blue;
+      position: absolute;
+      right: 10px;
+      width: 70%;
+      p {
+        font-size: 20px;
+        line-height: 25px;
+        padding: 5px;
+      }
     }
   }
-}
-
+  article {
+        padding-left: 0px;
+  }
 }
 
 aside.rules {
